# T4INF1004.2-Programmieren-2

./: .gitignore  README.md
1-einfuehrung/vehicle/: CMakeLists.txt  Vehicle.cpp  Vehicle.hpp  main.cpp
1-einfuehrung/vorlesung-2025-05-07/: CMakeLists.txt  main.cpp
1-einfuehrung/water-temp/: WaterTemp.cpp
2-objektorientierung/perception-sensor/: CMakeLists.txt  Lidar.cpp  Lidar.hpp  Material.hpp  Object.cpp  Object.hpp  PerceptionSensor.cpp  PerceptionSensor.hpp  Radar.cpp  Radar.hpp  main.cpp
2-objektorientierung/person/: CMakeLists.txt  Nationality.hpp  Person.hpp  main.cpp
2-objektorientierung/places/: CMakeLists.txt  Place.cpp  Place.h  Sight.cpp  Sight.h  Toilet.cpp  Toilet.h  main.cpp
2-objektorientierung/raii/: CMakeLists.txt  main.cpp
2-objektorientierung/rectangle/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  main.cpp
2-objektorientierung/vehicle-extended/: CMakeLists.txt  Color.hpp  Nationality.hpp  Person.cpp  Person.hpp  TollStation.cpp  TollStation.hpp  Vehicle.cpp  Vehicle.hpp  main.cpp
2-objektorientierung/vorlesung-2025-05-28/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  main.cpp
2-objektorientierung/vorlesung-2025-06-04/: CMakeLists.txt  main1.cpp  main2.cpp
2-objektorientierung/water-temp/: CMakeLists.txt  WaterTemp.hpp  main.cpp
3-vertiefung-cpp/bank/: Account.cpp  Account.h  AccountType.h  CMakeLists.txt  MoneyMarketAccount.cpp  MoneyMarketAccount.h  PropertyFinanceAgreement.cpp  PropertyFinanceAgreement.h  TransactionAccount.cpp  TransactionAccount.h  main.cpp
(+2 files in other folders)
